--- a/test-12pm.qmd
+++ b/test-12pm.qmd
@@ -8,10 +8,11 @@ editor: visual
 
 ## Set up chunk
 ```{r}
-library(tidyverse)
-library(lterdatasampler)
+#| message: false
+library(tidyverse) # general use package 
+library(lterdatasampler) # package of data frames
 
-data(pie_crab)
+data(pie_crab) #importing pie_crab data
 ```
 
 
@@ -21,8 +22,9 @@ data(pie_crab)
 
 ```{r}
 #| label: latitude size plot
-ggplot(data = pie_crab,
-       aes(x = latitude,
-           y = size))
+# base layer for plot
+ggplot(data = pie_crab, # data is pie_crab
+       aes(x = latitude, #x is latitude
+           y = size)) #y is size 
 ```
 
